# mytodo

./: .directory  Cargo.toml  README.md  Temp_Text.txt  pending.data
src/: main.rs
test/some-documents/: Purge_Test.txt  comp-orph.data  comp-purge.data  completed1.data  completedx1.data  elements.txt  pend-orph.data  pend-purge.data  pending1.data
test/working/: completed.data  pending.data  settings.txt
