[package]
name = "mytodo"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# field_names = "0.2.0"
chronoutil = "0.2.3"
inflections = "1.1.1"
derivative = "2.2.0"
# bincode = "1.3.3"
substring = "1.4.5"
# draw_box = "0.2.1"
termion = "1.5.6"
thousands = "0.2.0"
parse-display = "0.5.3"
chrono = "0.4.19"
textwrap = "0.15.0"
# csv = "1.1.6"
term_size = "0.3.2"


