[package]
name = "mytodo"
version = "1.2.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chronoutil = "0.2.3"
inflections = "1.1.1"
derivative = "2.2.0"
substring = "1.4.5"
termion = "1.5.6"
thousands = "0.2.0"
parse-display = "0.6.0"
chrono = "0.4.19"
textwrap = "0.15.0"
term_size = "0.3.2"


